--- a/elements/footer.html
+++ b/elements/footer.html
@@ -20,11 +20,59 @@
    <!--Content-->
    <div class="xl:col-span-10">
     <div class="mt-8 xl:mt-24">
-     <div class="my-4 mx-4 xl:mx-8">
-      <div>
+     <div class="my-4 mx-auto xl:mx-8 w-5/6 xl:w-4/6 divide-y divide-gray-300">
+      <div class="pb-8">
        <h2 class="text-blue-darkblue text-4xl -mt-2">
-        Elements - Footer<span class="text-orange-coolblue">.</span>
+        Footer<span class="text-orange-coolblue">.</span>
        </h2>
+       <p>
+        Closing an email is always done by the footer of that mail. The footer contains necessary information for the user, with links to unsubscribe, get in touch with the customer service or read up on legal documents like our privacy policy. We also often use the footer to get customer feedback via Close Alert.
+       </p>
+      </div>
+      <div class="py-8">
+       <h3 class="pb-2">Essential components</h3>
+       <p>These components are always included in an email:</p>
+       <div class="mt-8 grid grid-cols-1 md:grid-cols-3 gap-4">
+        <a href="">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+          <h4 class="pb-2">Content bar</h4>
+          <p class="text-sm mb-2">A branded bar containing some general links to the customer service, stores and the app.<span class="md:block xl:hidden">&nbsp;</span></p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 3 | Last updated: -</p>
+          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          <div class="mt-4">
+           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
+          </div>
+         </div>
+        </a>
+        <a href="">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+          <h4 class="pb-2">Bottom menu</h4>
+          <p class="text-sm mb-2">Contains links to the privacy policy, our terms and conditions and (when applicable) the unsubscribe link.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
+          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          <div class="mt-4">
+           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
+          </div>
+         </div>
+        </a>
+       </div>
+      </div>
+      <div class="py-8">
+       <h3 class="pb-2">Optional components</h3>
+       <p>These components can be used in emails, but are not necessary:</p>
+       <div class="mt-8 grid grid-cols-1 md:grid-cols-3 gap-4">
+        <a href="">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+          <h4 class="pb-2">Close Alert</h4>
+          <p class="text-sm mb-2">An element to guide users to our Close Alert page, where they can give feedback on the specific mail they have received.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
+          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          <div class="mt-4">
+           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
+          </div>
+         </div>
+        </a>
+       </div>
       </div>
      </div>
     </div>
