--- a/nav.html
+++ b/nav.html
@@ -58,7 +58,7 @@
        <a href="/elements/body.html" class="hover:underline">Body</a>
       </li>
       <li class="py-1">
-       <a href="elements/footer.html" class="hover:underline">Footer</a>
+       <a href="/elements/footer.html" class="hover:underline">Footer</a>
       </li>
      </ul>
     </div>
