--- a/elements/frameworks.html
+++ b/elements/frameworks.html
@@ -20,11 +20,53 @@
    <!--Content-->
    <div class="xl:col-span-10">
     <div class="mt-8 xl:mt-24">
-     <div class="my-4 mx-4 xl:mx-8">
-      <div>
+     <div class="my-4 mx-auto xl:mx-8 w-5/6 xl:w-4/6 divide-y divide-gray-300">
+      <div class="pb-8">
        <h2 class="text-blue-darkblue text-4xl -mt-2">
         Frameworks<span class="text-orange-coolblue">.</span>
        </h2>
+       <p>
+        Frameworks are used to create new emails quickly and easily, without needing to reinvent the wheel every time you need a new design.
+       </p>
+      </div>
+      <div class="py-8">
+       <h3 class="pb-2">Frameworks</h3>
+       <p>Our frameworks have been split into three types: head frameworks, body frameworks and element frameworks.</p>
+       <div class="mt-8 grid grid-cols-1 md:grid-cols-3 gap-4">
+        <a href="">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+          <h4 class="pb-2">Head frameworks</h4>
+          <p class="text-sm mb-2">Frameworks containing the head and CSS of an email.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 3 | Last updated: -</p>
+          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          <div class="mt-4">
+           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
+          </div>
+         </div>
+        </a>
+        <a href="">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+          <h4 class="pb-2">Body frameworks</h4>
+          <p class="text-sm mb-2">Frameworks containing the code for the body of an email.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 2 | Last updated: -</p>
+          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          <div class="mt-4">
+           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
+          </div>
+         </div>
+        </a>
+        <a href="">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+          <h4 class="pb-2">Element frameworks</h4>
+          <p class="text-sm mb-2">Frameworks used to build new elements.</p>
+          <p class="text-sm text-gray-500 pb-2">Variations: 1 | Last updated: -</p>
+          <span class="bg-orange-coolblue py-1 px-2 text-sm rounded text-white bold label">In use</span>
+          <div class="mt-4">
+           <p class="text-sm text-blue-coolblue"><i class="fas fa-angle-right"></i> <span class="hover:underline">Read more</span></p>
+          </div>
+         </div>
+        </a>
+       </div>
       </div>
      </div>
     </div>
