--- a/nav.html
+++ b/nav.html
@@ -45,7 +45,7 @@
    </div>
    <!--Elements-->
    <div class="py-4 menu">
-    <button class="w-full text-left text-white font-bold text-sm menu-button">Elements <span class="float-right"><i class="fas fa-angle-right"></i></span></button>
+    <button class="w-full text-left text-white font-bold text-sm menu-button">Components <span class="float-right"><i class="fas fa-angle-right"></i></span></button>
     <div class="text-white text-sm pl-2 border-l-2 border-blue-300 mt-2 hidden">
      <ul>
       <li class="py-1">
