--- a/nav.html
+++ b/nav.html
@@ -49,16 +49,16 @@
     <div class="text-white text-sm pl-2 border-l-2 border-blue-300 mt-2 hidden">
      <ul>
       <li class="py-1">
-       <a href="/elements/frameworks.html" class="hover:underline">Frameworks</a>
+       <a href="/components/frameworks.html" class="hover:underline">Frameworks</a>
       </li>
       <li class="py-1">
-       <a href="/elements/header.html" class="hover:underline">Header</a>
+       <a href="/components/header.html" class="hover:underline">Header</a>
       </li>
       <li class="py-1">
-       <a href="/elements/body.html" class="hover:underline">Body</a>
+       <a href="/components/body.html" class="hover:underline">Body</a>
       </li>
       <li class="py-1">
-       <a href="/elements/footer.html" class="hover:underline">Footer</a>
+       <a href="/components/footer.html" class="hover:underline">Footer</a>
       </li>
      </ul>
     </div>
