--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
          </div>
         </a>
-        <a href="">
+        <a href="/components/components.html">
          <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
           <i class="fas fa-cubes text-6xl text-blue-coolblue mb-4"></i>
           <h4>Email components</h4>
