--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
        <h3 class="pb-2">Getting started</h3>
        <p>The email development system serves multiple purposed, but our main goal is to guide you through the possibilities of HTML emails, like the ones we use for our marketing purposes. Therefor we divided this system into multiple sections.</p>
        <div class="mt-8 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4">
-        <a href="">
-         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+        <a href="#">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center bg-gray-100 opacity-25">
           <i class="far fa-book-spells text-6xl text-blue-coolblue mb-4"></i>
           <h4>Email Development 101</h4>
           <p class="text-sm">Learn the basics of email code and development.</p>
@@ -53,8 +53,8 @@
           </div>
          </div>
         </a>
-        <a href="">
-         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+        <a href="#">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center bg-gray-100 opacity-25">
           <i class="far fa-mail-bulk text-6xl text-blue-coolblue mb-4"></i>
           <h4>Email templates</h4>
           <p class="text-sm">An overview of our recurring campaigns and build templates.</p>
@@ -63,8 +63,8 @@
           </div>
          </div>
         </a>
-        <a href="">
-         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center">
+        <a href="#">
+         <div class="p-4 border-gray-300 hover:border-gray-500 duration-200 border rounded text-center bg-gray-100 opacity-25">
           <i class="far fa-cogs text-6xl text-blue-coolblue mb-4"></i>
           <h4>Tools</h4>
           <p class="text-sm">Handy tools and other information to get you going.</p>
